[gd_scene load_steps=2 format=3 uid="uid://dhqo08tfsvc7"]

[ext_resource type="Script" uid="uid://m41mn1koiwde" path="res://UI/CutscenePlayer/cutscene_player.gd" id="1_cutscene_player"]

[node name="CutscenePlayer" type="CanvasLayer" groups=["cutscene_player"]]
layer = 99
script = ExtResource("1_cutscene_player")

[node name="Background" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)

[node name="CutsceneImage" type="TextureRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
expand_mode = 1
stretch_mode = 5

[node name="SkipIndicator" type="Control" parent="."]
visible = false
layout_mode = 3
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -260.0
offset_top = 20.0
offset_right = -20.0
offset_bottom = 75.0
grow_horizontal = 0

[node name="Background" type="ColorRect" parent="SkipIndicator"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.85)

[node name="MarginContainer" type="MarginContainer" parent="SkipIndicator"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 12
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 12
theme_override_constants/margin_bottom = 8

[node name="VBoxContainer" type="VBoxContainer" parent="SkipIndicator/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 6

[node name="Label" type="Label" parent="SkipIndicator/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 18
text = "Hold ESC to Skip"
horizontal_alignment = 1

[node name="ProgressBar" type="ProgressBar" parent="SkipIndicator/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 20)
layout_mode = 2
max_value = 1.0
value = 0.5
show_percentage = false
